# lib7etsuo

./: CMakeLists.txt  README.md  edit.py
examples/except/: CMakeLists.txt  example_1.c
examples/log/: CMakeLists.txt  example_1.c
examples/mem/: CMakeLists.txt  example_1.c
include/lib7etsuo/core/except/: L7_Except.h
include/lib7etsuo/core/log/: L7_Logger.h
include/lib7etsuo/core/mem/: L7_Arena.h
include/lib7etsuo/core/sec/: L7_Security.h
include/lib7etsuo/net/socket/: Socket.h
include/lib7etsuo/util/except/: L7_Except.h
orig/: CMakeLists.txt  demo_tcurl.sh  libsocket.pc.in
orig/include/core/: Arena.h  HashTable.h  SocketConfig.h  SocketCrypto.h  SocketIPTracker.h  SocketMetrics.h  SocketRateLimit-private.h  SocketRateLimit.h  SocketRetry.h  SocketSYNProtect-private.h  SocketSYNProtect.h  SocketSecurity.h  SocketTimer-private.h  SocketTimer.h  SocketUTF8.h  SocketUtil.h  TimeWindow.h
orig/include/curl/: StreamingCurl-private.h  StreamingCurl.h  curl_args.h
orig/include/dns/: SocketDNS-private.h  SocketDNS.h  SocketDNSConfig.h  SocketDNSCookie.h  SocketDNSDeadServer.h  SocketDNSError.h  SocketDNSNegCache.h  SocketDNSResolver.h  SocketDNSSEC.h  SocketDNSServfailCache.h  SocketDNSTransport.h  SocketDNSWire.h  SocketDNSoverHTTPS.h  SocketDNSoverTLS.h
orig/include/http/: SocketHPACK-private.h  SocketHPACK.h  SocketHTTP-private.h  SocketHTTP.h  SocketHTTP1-private.h  SocketHTTP1.h  SocketHTTP2-private.h  SocketHTTP2.h  SocketHTTPClient-config.h  SocketHTTPClient-private.h  SocketHTTPClient.h  SocketHTTPServer-private.h  SocketHTTPServer.h
orig/include/poll/: SocketPoll-private.h  SocketPoll.h  SocketPoll_backend.h
orig/include/pool/: SocketPool-private.h  SocketPool.h  SocketPoolHealth-private.h  SocketPoolHealth.h
orig/include/socket/: Socket-private.h  SocketAsync-private.h  SocketAsync.h  SocketBuf.h  SocketCommon-private.h  SocketCommon.h  SocketDgram-private.h  SocketDgram.h  SocketHappyEyeballs-private.h  SocketHappyEyeballs.h  SocketIO.h  SocketProxy-private.h  SocketProxy.h  SocketReconnect-private.h  SocketReconnect.h  SocketWS-private.h  SocketWS-transport.h  SocketWS.h  SocketWSH2.h
orig/include/tls/: SocketDTLS-private.h  SocketDTLS.h  SocketDTLSConfig.h  SocketDTLSContext.h  SocketSSL-internal.h  SocketTLS-private.h  SocketTLS.h  SocketTLSConfig.h  SocketTLSContext.h
orig/src/: tags
orig/src/core/: Arena.c  HashTable.c  SocketCrypto.c  SocketIPTracker.c  SocketMetrics.c  SocketRateLimit.c  SocketRetry.c  SocketSYNProtect-ip.c  SocketSYNProtect-list.c  SocketSYNProtect.c  SocketSecurity.c  SocketTimer.c  SocketUTF8.c  SocketUtil.c  TimeWindow.c
orig/src/curl/: StreamingCurl.c  StreamingCurl_auth.c  StreamingCurl_connect.c  StreamingCurl_cookie.c  StreamingCurl_decomp.c  StreamingCurl_h1.c  StreamingCurl_h2.c  StreamingCurl_redirect.c  StreamingCurl_request.c  StreamingCurl_url.c  curl_args.c  curl_main.c
orig/src/dns/: SocketDNS-internal.c  SocketDNS.c  SocketDNSConfig.c  SocketDNSCookie.c  SocketDNSDeadServer.c  SocketDNSError.c  SocketDNSNegCache.c  SocketDNSResolver.c  SocketDNSSEC.c  SocketDNSServfailCache.c  SocketDNSTransport.c  SocketDNSWire.c  SocketDNSoverHTTPS.c  SocketDNSoverTLS.c
orig/src/http/: SocketHPACK-huffman.c  SocketHPACK-table.c  SocketHPACK.c  SocketHTTP-core.c  SocketHTTP-date.c  SocketHTTP-headers.c  SocketHTTP-uri.c  SocketHTTP1-chunked.c  SocketHTTP1-compress.c  SocketHTTP1-parser.c  SocketHTTP1-serialize.c  SocketHTTP2-connection.c  SocketHTTP2-flow.c  SocketHTTP2-frame.c  SocketHTTP2-priority.c  SocketHTTP2-stream.c  SocketHTTP2-validate.c  SocketHTTPClient-arena.c  SocketHTTPClient-async.c  SocketHTTPClient-auth.c  SocketHTTPClient-cookie.c  SocketHTTPClient-pool.c  SocketHTTPClient-retry.c  SocketHTTPClient.c  SocketHTTPServer-connections.c  SocketHTTPServer.c
orig/src/poll/: SocketPoll.c  SocketPoll_epoll.c  SocketPoll_kqueue.c  SocketPoll_poll.c  SocketPoll_uring.c
orig/src/pool/: SocketPool-connections.c  SocketPool-core.c  SocketPool-drain.c  SocketPool-health.c  SocketPool-ops.c  SocketPool-ratelimit.c
orig/src/socket/: Socket-connect.c  Socket-convenience.c  Socket-fd.c  Socket-iov.c  Socket-options.c  Socket.c  SocketAsync.c  SocketBuf.c  SocketCommon.c  SocketDgram.c  SocketHappyEyeballs.c  SocketIO.c  SocketProxy-http.c  SocketProxy-socks4.c  SocketProxy-socks5.c  SocketProxy.c  SocketReconnect.c  SocketWS-deflate.c  SocketWS-frame.c  SocketWS-handshake.c  SocketWS-transport.c  SocketWS.c  SocketWSH2.c
orig/src/tls/: SocketDTLS-cookie.c  SocketDTLS.c  SocketDTLSContext.c  SocketTLS-ktls.c  SocketTLS-performance.c  SocketTLS.c  SocketTLSConfig.c  SocketTLSContext-alpn.c  SocketTLSContext-certs.c  SocketTLSContext-core.c  SocketTLSContext-crl.c  SocketTLSContext-ct.c  SocketTLSContext-pinning.c  SocketTLSContext-session.c  SocketTLSContext-verify.c
src/core/except/: CMakeLists.txt  L7_Except.c
src/core/log/: CMakeLists.txt  L7_Logger.c
src/core/mem/: CMakeLists.txt  L7_Arena.c
src/util/except/: L7_Except.c
